add popUp.html to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <load src="partials/header.html" />
 
     <main>
-      <load ="partials/home-page.html" />
+      <load src="partials/home-page.html" />
+      <load src="partials/pop-up.html"/>
+      
     </main>
     <script type="module" src="/main.js"></script>
   </body>
