--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
     <main>
       <load src="partials/home-page.html" />
       <load src="partials/pop-up.html" />
+      <load src="partials/query-and-markup.html" />
 
       <section>
         <div class="container">
