--- a/src/index.html
+++ b/src/index.html
@@ -38,15 +38,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
+    <load src="partials/header.html" />
     <main>
-      <load src="partials/home-page.html" />
-      <load src="partials/pop-up.html" />
-
       <section>
         <div class="container">
-          <div class="left-side">
+          <div class="lists">
             <div class="categories">
               <ul class="categories-list"></ul>
             </div>
@@ -55,11 +51,14 @@
             </div>
           </div>
           <div class="books">
-            <h1></h1>
+            <h1 class="category-title">Title</h1>
             <ul class="gallery"></ul>
           </div>
         </div>
       </section>
+      <load src="partials/home-page.html" />
+      <load src="partials/pop-up.html" />
+
     </main>
     <script type="module" src="/main.js"></script>
   </body>
