--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -11,5 +11,28 @@
       <a href="./index.html">Go to home</a>
       <h1>Your shopping list</h1>
     </section>
+    <section>
+      <h2 class="shopping-list-title">Shopping <span class="shopping-list-subtitle">List</span></h2>
+      <ul>
+        <li class="shopping-list-book-card">
+          <img src="" alt="Зображення книги">
+          <div class="shopping-list-book-details">
+              <h2 class="shopping-list-book-name">Заголовок книги</h2>
+              <h3 class="shopping-list-book-genre">жанр</h3>
+              <p class="shopping-list-book-deskription">Опис</p>
+              <p class="shopping-list-author">автора</p>
+          </div>
+          <div class="shopping-list-icons">
+              <svg class="shopping-list-delete-icon"> 
+              </svg>
+              <div class="shopping-list-company-icons">
+                  <img src="amazon-icon.png" alt="Amazon">
+                  <img src="company2-icon.png" alt="Company 2">
+                  <img src="company3-icon.png" alt="Company 3">
+              </div>
+          </div>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
