--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900;9..40,1000&display=swap"
+    rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Bookshelf</title>
   </head>
   <body>
@@ -23,8 +28,11 @@
               <p class="shopping-list-author">автора</p>
           </div>
           <div class="shopping-list-icons">
-              <svg class="shopping-list-delete-icon"> 
-              </svg>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <title>trash-03</title>
+              <path fill="none" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="2.6667" stroke="#000" d="M12 4h8M4 8h24M25.333 8l-0.935 14.026c-0.14 2.104-0.21 3.156-0.665 3.954-0.4 0.702-1.004 1.267-1.731 1.62-0.826 0.4-1.881 0.4-3.99 0.4h-4.025c-2.109 0-3.163 0-3.99-0.4-0.727-0.353-1.331-0.917-1.731-1.62-0.455-0.798-0.525-1.85-0.665-3.954l-0.935-14.026M13.333 14v6.667M18.667 14v6.667"></path>
+            </svg>
+              
               <div class="shopping-list-company-icons">
                   <img src="amazon-icon.png" alt="Amazon">
                   <img src="company2-icon.png" alt="Company 2">
