--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -20,23 +20,23 @@
       <h2 class="shopping-list-title">Shopping <span class="shopping-list-subtitle">List</span></h2>
       <ul>
         <li class="shopping-list-book-card">
-          <img src="" alt="Зображення книги">
+          <img src="" alt="Зображення книги" class="shopping-list-img">
           <div class="shopping-list-book-details">
               <h2 class="shopping-list-book-name">Заголовок книги</h2>
-              <h3 class="shopping-list-book-genre">жанр</h3>
+              <p class="shopping-list-book-genre">жанр</p>
               <p class="shopping-list-book-deskription">Опис</p>
               <p class="shopping-list-author">автора</p>
           </div>
           <div class="shopping-list-icons">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32">
               <title>trash-03</title>
               <path fill="none" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="4" stroke-width="2.6667" stroke="#000" d="M12 4h8M4 8h24M25.333 8l-0.935 14.026c-0.14 2.104-0.21 3.156-0.665 3.954-0.4 0.702-1.004 1.267-1.731 1.62-0.826 0.4-1.881 0.4-3.99 0.4h-4.025c-2.109 0-3.163 0-3.99-0.4-0.727-0.353-1.331-0.917-1.731-1.62-0.455-0.798-0.525-1.85-0.665-3.954l-0.935-14.026M13.333 14v6.667M18.667 14v6.667"></path>
             </svg>
               
               <div class="shopping-list-company-icons">
-                  <img src="amazon-icon.png" alt="Amazon">
-                  <img src="company2-icon.png" alt="Company 2">
-                  <img src="company3-icon.png" alt="Company 3">
+                  <a href=""><img src="amazon-icon.png" alt="Amazon"></a>
+                  <a href=""><img src="company2-icon.png" alt="Company 2"></a>
+                  <a href=""><img src="company3-icon.png" alt="Company 3"></a>
               </div>
           </div>
         </li>
