--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
     <load src="partials/header.html" />
     <main>
       <load src="partials/home-page.html" />
-      <load src="partials/pop-up.html" />
-      <load src="partials/query-and-markup.html" />
+      <!-- <load src="partials/pop-up.html" /> -->
+
       <section>
         <div class="container">
           <div class="lists">
@@ -60,7 +60,7 @@
         </div>
       </section>
       <load src="partials/home-page.html" />
-      <load src="partials/pop-up.html" />
+      <!-- <load src="partials/pop-up.html" /> -->
 
     </main>
     <script type="module" src="/main.js"></script>
