--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
     <load src="partials/header.html" />
     <main>
       <load src="partials/home-page.html" />
-      <!-- <load src="partials/pop-up.html" /> -->
+      <load src="partials/pop-up.html" />
 
       <section>
         <div class="container">
@@ -60,7 +60,7 @@
         </div>
       </section>
       <load src="partials/home-page.html" />
-      <!-- <load src="partials/pop-up.html" /> -->
+      <load src="partials/pop-up.html" />
 
     </main>
     <script type="module" src="/main.js"></script>
