--- a/src/index.html
+++ b/src/index.html
@@ -41,27 +41,22 @@
     <load src="partials/header.html" />
     <main>
       <load src="partials/home-page.html" />
-      <load src="partials/pop-up.html" />
+      <!-- <load src="partials/pop-up.html" /> -->
       <load src="partials/query-and-markup.html" />
       <section>
         <div class="container">
-          <div class="lists">
-            <div class="categories">
-              <ul class="categories-list"></ul>
-            </div>
+          <div class="lists">            
+            <ul class="categories-list"></ul>            
             <div class="funds">
               <ul class="funds-list"></ul>
             </div>
           </div>
           <div class="books">
-            <h1 class="category-title">Title</h1>
+            <h1 class="category-title">Best Sellers <span class="cat-span">Books</span></h1>
             <ul class="gallery"></ul>
           </div>
         </div>
       </section>
-      <load src="partials/home-page.html" />
-      <load src="partials/pop-up.html" />
-
     </main>
     <script type="module" src="/main.js"></script>
   </body>
