--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
           </div>
           <div class="books">
             <h1 class="category-title">Best Sellers <span class="cat-span">Books</span></h1>
-            <ul class="gallery"></ul>
+            <div class="gallery"></div>
           </div>
         </div>
       </section>
