--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,9 @@
             <div class="categories">
               <ul class="categories-list"></ul>
             </div>
-            <div class="funds">
-              <ul class="funds-list"></ul>
+            <div class="container-support">
+              <p class="primart-text-support">Support Ukraine</p><img src="../img/favicon/Vector.png" alt="" class="emblem">
+              <ul class="list-support"></ul>
             </div>
           </div>
           <div class="books">
