--- a/src/index.html
+++ b/src/index.html
@@ -41,13 +41,13 @@
     <load src="partials/header.html" />
     <main>
       <load src="partials/home-page.html" />
-      <load src="partials/pop-up.html" />
+      <!-- <load src="partials/pop-up.html" /> -->
 
       <section>
         <div class="container">
           <div class="lists">
             <div class="categories">
-              <ul class="categories-list"></ul>
+              <ul class="categories-list scroll-container"></ul>
             </div>
             <div class="funds">
               <ul class="funds-list"></ul>
@@ -60,7 +60,7 @@
         </div>
       </section>
       <load src="partials/home-page.html" />
-      <load src="partials/pop-up.html" />
+      <!-- <load src="partials/pop-up.html" /> -->
 
     </main>
     <script type="module" src="/main.js"></script>
