--- a/src/index.html
+++ b/src/index.html
@@ -40,14 +40,14 @@
   <body>
     <load src="partials/header.html" />
     <main>
-      <load src="partials/query-and-markup.html" />
-
       <section>
         <div class="container">
 
           <div class="lists">
             <div class="categories">
-              <ul class="categories-list"></ul>
+              <ul class="categories-list">
+                <li class="book-list"><a href="#" class="list-link">All categories</a></li>
+              </ul>
             </div>
             <div class="container-support">
               <p class="primart-text-support">Support Ukraine</p><img src="../img/favicon/Vector.png" alt="" class="emblem">
