--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -19,14 +19,14 @@
     <section>
       <h2 class="shopping-list-title">Shopping <span class="shopping-list-subtitle">List</span></h2>
 
-      <div id="shoppingBookList" class="shopping-list-empty">
+      <div id="shoppingEmptyMessage" class="shopping-list-empty">
         <div>
           <p>This page is empty, add some books and proceed to order.</p>
           <img src="./img/shopping-list-icon/backgraund-shopping-list.png" alt="">
         </div>
       </div>
 
-      <ul id="shoppingEmptyMessage">
+      <ul id="shoppingBookList">
         <li class="shopping-list-book-card">
           <img src="" alt="Зображення книги" class="shopping-list-img">
           <div class="shopping-list-book-details">
