--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,8 @@
     <load src="partials/header.html" />
     <main>
       <load src="partials/home-page.html" />
-      <load src="partials/pop-up.html" />
+      <!-- <load src="partials/pop-up.html" /> -->
+      <load src="partials/pagination.html" />
       <load src="partials/query-and-markup.html" />
       <section>
         <div class="container">
@@ -60,8 +61,8 @@
         </div>
       </section>
       <load src="partials/home-page.html" />
-      <load src="partials/pop-up.html" />
-
+      <!-- <load src="partials/pop-up.html" /> -->
+      <load src="partials/pagination.html" />
     </main>
     <script type="module" src="/main.js"></script>
   </body>
