category css finished

--- a/src/index.html
+++ b/src/index.html
@@ -56,10 +56,10 @@
             </div>
           </div>
           <div class="books">
-            <h1 class="category-title">Best Sellers <span class="cat-span">Books</span></h1>
+            <h1 class="category-title">Best Sellers<span class="cat-span">Books</span></h1>
             <div class="gallery"></div>
+            <p class="loader visually-hidden"></p>
           </div>
-        </div>
       </section>
       <load src="partials/pop-up.html" />
     </main>
