--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -27,7 +27,7 @@
       </div>
 
       <ul id="shoppingBookList">
-        <li class="shopping-list-book-card">
+        <!-- <li class="shopping-list-book-card">
           <img src="" alt="Зображення книги" class="shopping-list-img">
           <div class="shopping-list-book-details">
               <h2 class="shopping-list-book-name"></h2>
@@ -50,8 +50,9 @@
                   <a href=""><img src="./img/shopping-list-icon/company-3.png" alt="Company 3"></a>
               </div>
           </div>
-        </li>
+        </li> -->
       </ul>
     </section>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
