--- a/src/index.html
+++ b/src/index.html
@@ -42,25 +42,34 @@
     <main>
       <section>
         <div class="container">
-
           <div class="lists">
             <div class="categories">
               <ul class="categories-list scroll-container">
-                <li class="book-list"><a href="#" class="list-link">All categories</a></li>
+                <li class="book-list">
+                  <a href="#" class="list-link">All categories</a>
+                </li>
               </ul>
             </div>
             <div class="container-support">
-              <p class="primart-text-support">Support Ukraine</p><img src="../img/favicon/Vector.png" alt="emblem" class="emblem">
+              <p class="primart-text-support">Support Ukraine</p>
+              <img
+                src="../img/favicon/Vector.png"
+                alt="emblem"
+                class="emblem"
+              />
               <ul class="list-support" id="list-support"></ul>
             </div>
           </div>
           <div class="books">
-            <h1 class="category-title">Best Sellers <span class="cat-span">Books</span></h1>
+            <h1 class="category-title">
+              Best Sellers <span class="cat-span">Books</span>
+            </h1>
             <div class="gallery"></div>
           </div>
         </div>
       </section>
       <load src="partials/pop-up.html" />
+      <load src="partials/pagination.html" />
     </main>
     <script type="module" src="/main.js"></script>
   </body>
