--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -32,7 +32,7 @@
 
       </ul>
     </section>
-    <script type="module" src="./js/shopping-list.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 
 </html>
