--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
                 <li class="book-list"><a href="#" class="list-link">All categories</a></li>
               </ul>            
             <div class="container-support">
-              <p class="primart-text-support">Support Ukraine</p><img src="../img/favicon/Vector.png" alt="emblem" class="emblem">
+              <p class="primart-text-support">Support Ukraine</p><img src="./img/favicon/Vector.png" alt="emblem" class="emblem">
               <ul class="list-support" id="list-support"></ul>
             </div>
           </div>
