якось ось так, це ще не все

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
           <div class="lists">
               <ul class="categories-list scroll-container">
                 <li class="book-list"><a href="#" class="list-link">All categories</a></li>
-              </ul>            
+              </ul>
             <div class="container-support">
               <p class="primart-text-support">Support Ukraine</p><img src="./img/favicon/Vector.png" alt="emblem" class="emblem">
               <ul class="list-support" id="list-support"></ul>
@@ -58,6 +58,7 @@
           </div>
       </section>
       <load src="partials/pop-up.html" />
+      <load src="partials/footer.html"/>
     </main>
     <script type="module" src="/main.js"></script>
   </body>
