--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -34,5 +34,5 @@
     </section>
     <script type="module" src="./main.js"></script>
   </body>
-
+<script type="module" src="./main.js"></script>
 </html>
