plus support ukraine

--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -21,6 +21,14 @@
     <section>
       <h2 class="shopping-list-title">Shopping <span class="shopping-list-subtitle">List</span></h2>
 
+      <div class="container-support">
+        <p class="primart-text-support">Support Ukraine</p>
+        <img src="../img/favicon/Vector.png" alt="emblem" class="emblem">
+        <ul class="list-support" id="list-support">
+          
+        </ul>
+      </div>
+
       <div id="shoppingEmptyMessage" class="shopping-list-empty">
         <div>
           <p>This page is empty, add some books and proceed to order.</p>
