--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
             <div class="gallery"></div>
             <p class="loader visually-hidden"></p>
           </div>
+          <button type="button" class="to-top">▲</button>
       </section>
       <load src="partials/pop-up.html" />
     </main>
