--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -2,16 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./img/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./img/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./img/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./img/favicon/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900;9..40,1000&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Bookshelf</title>
   </head>
-  
+
   <body>
     <load src="partials/header.html" />
     <!-- <section>
@@ -34,8 +61,7 @@
       </div>
 
       <ul id="shoppingBookList">
-
-<!--         <li class="shopping-list-book-card">
+        <!--         <li class="shopping-list-book-card">
           <img src="" alt="Зображення книги" class="shopping-list-img" />
           <div class="shopping-list-book-details">
             <h2 class="shopping-list-book-name"></h2>
@@ -82,10 +108,9 @@
             </div>
           </div>
         </li> -->
-
       </ul>
     </section>
+    <load src="partials/pagination.html" />
     <script type="module" src="./main.js"></script>
   </body>
-<script type="module" src="./main.js"></script>
 </html>
