--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,6 @@
       <section>
         <div class="container">
           <div class="lists">
-
             <ul class="categories-list scroll-container">
               <li class="book-list">
                 <a href="#" class="list-link">All categories</a>
@@ -70,12 +69,39 @@
       </section>
       <load src="partials/pop-up.html" />
 
-      
-
       <load src="partials/pagination.html" />
-
     </main>
-  <load src="partials/footer.html"/>
+    <load src="partials/footer.html" />
+
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="modal-btn js-close-menu" type="button" data-modal-close>
+        <svg class="modal-icon" width="8" height="8">
+          <use href="./img/svg/icons.svg#icon-close-x "></use>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu list">
+        <li>
+          <li class="nav-item">
+            <a href="./index.html" class="nav-link home-link">HOME</a>
+          </li>
+        <li>
+          <a href="./shopping-list.html" class="nav-link"
+            >SHOPPING LIST<svg
+              class="unchecked shoper-dark"
+              width="20"
+              height="20"
+            >
+              <use href="./img/svg/icons.svg#shopper-icon"></use></svg
+            ><svg class="shoper-icon dark-shopper-icon" width="20" height="20">
+              <use href="./img/svg/icons.svg#icon-dark-shopper"></use></svg
+          ></a>
+        </li>
+        <img class="mobil-menu-img" src="./img/header/books-group.png" alt="Books">
+      </ul>
+    </div>
+
     <script type="module" src="/main.js"></script>
+    <script type="module" src="./js/header.js"></script>
   </body>
 </html>
