--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
       </section>
       <load src="partials/pop-up.html" />
 
-<!--       <load src="partials/pagination.html" /> -->
+      <load src="partials/pagination.html" />
     </main>
     <load src="partials/footer.html" />
 
