--- a/src/index.html
+++ b/src/index.html
@@ -76,31 +76,31 @@
     <load src="partials/footer.html" />
 
     <div class="menu-container js-menu-container" id="mobile-menu">
-      <button class="modal-btn js-close-menu" type="button" data-modal-close>
-        <svg class="modal-icon" width="8" height="8">
+      <button class="close-modal-btn js-close-menu" type="button" data-modal-close>
+        <svg class="cross-modal-icon" width="28" height="28">
           <use href="./img/svg/icons.svg#icon-close-x "></use>
         </svg>
       </button>
 
       <ul class="mobile-menu list">
-        <li>
           <li class="nav-item">
             <a href="./index.html" class="nav-link home-link">HOME</a>
           </li>
         <li>
-          <a href="./shopping-list.html" class="nav-link"
-            >SHOPPING LIST<svg
+          <a href="./shopping-list.html" class="nav-link link-on-home-mobile">SHOPPING LIST
+            <svg
               class="unchecked shoper-dark"
               width="20"
-              height="20"
-            >
-              <use href="./img/svg/icons.svg#shopper-icon"></use></svg
-            ><svg class="shoper-icon dark-shopper-icon" width="20" height="20">
-              <use href="./img/svg/icons.svg#icon-dark-shopper"></use></svg
-          ></a>
+              height="20">
+              <use href="./img/svg/icons.svg#shopper-icon"></use>
+            </svg>
+            <svg class="shoper-icon dark-shopper-icon" width="20" height="20">
+              <use href="./img/svg/icons.svg#icon-dark-shopper"></use>
+            </svg>
+          </a>
         </li>
-        <img class="mobil-menu-img" src="./img/header/books-group.png" alt="Books">
       </ul>
+      <img class="mobil-menu-img" src="./img/header/books-group.png" alt="Books">
     </div>
 
     <script type="module" src="/main.js"></script>
