--- a/src/index.html
+++ b/src/index.html
@@ -82,19 +82,13 @@
         </svg>
       </button>
 
-      <ul class="mobile-menu list">
+      <ul class="mobile-menu">
           <li class="nav-item">
             <a href="./index.html" class="nav-link home-link">HOME</a>
           </li>
         <li>
           <a href="./shopping-list.html" class="nav-link link-on-home-mobile">SHOPPING LIST
-            <svg
-              class="unchecked shoper-dark"
-              width="20"
-              height="20">
-              <use href="./img/svg/icons.svg#shopper-icon"></use>
-            </svg>
-            <svg class="shoper-icon dark-shopper-icon" width="20" height="20">
+            <svg class="" width="20" height="20">
               <use href="./img/svg/icons.svg#icon-dark-shopper"></use>
             </svg>
           </a>
