shop list works, all errors in console removed

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,6 @@
       <section>
         <div class="container">
           <div class="lists">
-
             <ul class="categories-list scroll-container">
               <li class="book-list">
                 <a href="#" class="list-link">All categories</a>
@@ -57,12 +56,9 @@
             </div>
           </div>
           <div class="books">
-
             <h1 class="category-title">
               Best Sellers <span class="cat-span">Books</span>
             </h1>
-
-
             <div class="gallery"></div>
             <p class="loader visually-hidden"></p>
           </div>
@@ -70,7 +66,6 @@
         </div>
       </section>
       <load src="partials/pop-up.html" />
-
       <load src="partials/pagination.html" />
     </main>
     <load src="partials/footer.html" />
@@ -95,7 +90,7 @@
         </li>
       </ul>
     </div>
-
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./js/mobil-menu.js" defer></script>
+    <script type="module" src="/main.js" defer></script>
   </body>
 </html>
