--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -45,72 +45,29 @@
       <a href="./index.html">Go to home</a>
       <h1>Your shopping list</h1>
     </section> -->
-    <section>
-      <h2 class="shopping-list-title">
-        Shopping <span class="shopping-list-subtitle">List</span>
-      </h2>
-
-      <div id="shoppingEmptyMessage" class="shopping-list-empty">
-        <div>
+    <section class="section">
+      <div class="shop-list-container">
+        <div class="container-support">
+          <p class="primart-text-support">Support Ukraine</p>
+          <img src="./img/favicon/Vector.png" alt="emblem" class="emblem" />
+          <ul class="list-support" id="list-support"></ul>
+        </div>
+        <div class="shop-list-gallery">
+          <h2 class="shopping-list-title">
+            Shopping <span class="shopping-list-subtitle">List</span>
+          </h2>
+        <div id="shoppingEmptyMessage" class="shopping-list-empty">
           <p>This page is empty, add some books and proceed to order.</p>
           <img
             src="./img/shopping-list-icon/backgraund-shopping-list.png"
-            alt=""
+            alt="picture with books"
           />
         </div>
+          <div class="shop-list-with-books"></div>
+        </div>
       </div>
-
-      <ul id="shoppingBookList">
-        <!--         <li class="shopping-list-book-card">
-          <img src="" alt="Зображення книги" class="shopping-list-img" />
-          <div class="shopping-list-book-details">
-            <h2 class="shopping-list-book-name"></h2>
-            <p class="shopping-list-book-genre"></p>
-            <p class="shopping-list-book-deskription"></p>
-            <p class="shopping-list-author"></p>
-          </div>
-          <div class="shopping-list-icons">
-            <div class="shopping-list-svg">
-              <svg
-                version="1.1"
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 32 32"
-              >
-                <title>trash-03</title>
-                <path
-                  fill="none"
-                  stroke-linejoin="round"
-                  stroke-linecap="round"
-                  stroke-miterlimit="4"
-                  stroke-width="2.6667"
-                  stroke="#fff"
-                  d="M12 4h8M4 8h24M25.333 8l-0.935 14.026c-0.14 2.104-0.21 3.156-0.665 3.954-0.4 0.702-1.004 1.267-1.731 1.62-0.826 0.4-1.881 0.4-3.99 0.4h-4.025c-2.109 0-3.163 0-3.99-0.4-0.727-0.353-1.331-0.917-1.731-1.62-0.455-0.798-0.525-1.85-0.665-3.954l-0.935-14.026M13.333 14v6.667M18.667 14v6.667"
-                ></path>
-              </svg>
-            </div>
-
-            <div class="shopping-list-company-icons">
-              <a href=""
-                ><img src="./img/shopping-list-icon/company-1.png" alt="Amazon"
-              /></a>
-              <a href=""
-                ><img
-                  src="./img/shopping-list-icon/company-2.png"
-                  alt="Company 2"
-              /></a>
-              <a href=""
-                ><img
-                  src="./img/shopping-list-icon/company-3.png"
-                  alt="Company 3"
-              /></a>
-            </div>
-          </div>
-        </li> -->
-      </ul>
     </section>
     <load src="partials/pagination.html" />
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./shopping-list.js" defer></script>
   </body>
 </html>
